# llm-foundation

./: LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
evals/: compare_configs.py  questions.json  report.md  run_comparison.py  run_eval.py
evals/results/: comparison.md
notes/: findings.md  notes.md  rag-failures.md
src/: bm25_retriever.py  chunker.py  embedder.py  generator.py  hybrid_retriever.py  loader.py  reranker.py  retriever.py  semantic_chunker.py
