[project]
name = "llm-foundations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.102.0",
    "openai>=2.37.0",
    "numpy>=2.4.5",
    "scikit-learn>=1.8.0",
    "pypdf>=6.11.0",
    "pdfplumber>=0.11.9",
    "PyMuPDF>=1.27.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "rank-bm25>=0.2.2",
]

[tool.pyright]
pythonPath = "/opt/anaconda3/bin/python"
pythonVersion = "3.13"
